--- a/akira/index.html
+++ b/akira/index.html
@@ -28,21 +28,21 @@
             <h2>Unleash the power of efficiency with Akira, your all-in-one Discord solution.</h2>
         </div>
         <div class="banner-buttons">
-            <a href="/commands/">
+            <a href="../commands/">
                 <button><span>Commands</span>
                 <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
                     <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
                 </svg>
                 </button>
             </a>
-            <a href="/invite/">
+            <a href="../invite/">
                 <button><span>Invite Akira</span>
                 <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
                     <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
                 </svg>
                 </button>
             </a>
-            <a href="/premium">
+            <a href="../premium">
                 <button><span>Premium</span>
                 <svg viewBox="-5 -5 110 110" preserveAspectRatio="none" aria-hidden="true">
                     <path d="M0,0 C0,0 100,0 100,0 C100,0 100,100 100,100 C100,100 0,100 0,100 C0,100 0,0 0,0"/>
@@ -61,21 +61,21 @@
         <nav class="navigation-footer">
             <div class="section-entry">
                 <h3>Akira Bot</h3>
-                <a href="./" data-preload-link="true" data-preload-link-activated="true">Home</a>
-                <a href="/support" data-preload-link="true" data-preload-link-activated="true">Support Server</a>
-                <a href="/commands" data-preload-link="true" data-preload-link-activated="true">Commands</a>
-                <a href="/donate">Premium</a>
+                <a href="../" data-preload-link="true" data-preload-link-activated="true">Home</a>
+                <a href="../support" data-preload-link="true" data-preload-link-activated="true">Support Server</a>
+                <a href="../commands" data-preload-link="true" data-preload-link-activated="true">Commands</a>
+                <a href="../donate">Premium</a>
             </div>
             <div class="section-entry">
                 <h3>About us</h3>
-                <a href="/blog">Dev notes</a>
-                <a href="/contact">Contact Us</a>
-                <a href="/staff">Our Team</a>
+                <a href="../blog">Dev notes</a>
+                <a href="../contact">Contact Us</a>
+                <a href="../staff">Our Team</a>
             </div>
             <div class="section-entry">
                 <h3>Resources</h3>
-                <a href="/terms">Terms of Service</a>
-                <a href="/policy">Privacy Policy</a>
+                <a href="../terms">Terms of Service</a>
+                <a href="../policy">Privacy Policy</a>
             </div>
         </nav>
         <p style="text-align: center;">Akira 2023 — All rights reserved</p>
