--- a/akira/index.html
+++ b/akira/index.html
@@ -16,9 +16,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="/commands">Features</a></li>
+                <li><a href="/blog">About</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
