--- a/akira/index.html
+++ b/akira/index.html
@@ -65,6 +65,7 @@
                 <a href="./support" data-preload-link="true" data-preload-link-activated="true">Support Server</a>
                 <a href="./commands" data-preload-link="true" data-preload-link-activated="true">Commands</a>
                 <a href="./donate">Premium</a>
+                <a href="./status">Status</a>
             </div>
             <div class="section-entry">
                 <h3>About us</h3>
