--- a/akira/index.html
+++ b/akira/index.html
@@ -22,7 +22,7 @@
                     <a class="navbar-item" href="./commands"><i class="nav-icons fas fa-terminal nav-fa"></i>Commands</a>
                     <a class="navbar-item" href="./status"><i class="nav-icons fas fa-check nav-fa"></i>Status</a>
                     <a href="./support" target="_blank" class="navbar-item"><i class="nav-icons fab fa-discord nav-fa"></i>Community</a>
-                    <a href="./invite" target="_blank" class="navbar-item last-item"><i class="nav-icons fas fa-plus nav-fa"></i>Invite Akira</a>
+                    <a href="./invite" target="_blank" class="navbar-item last-item"><i class="nav-icons fas fa-plus nav-fa"></i>Invite</a>
                 </div>
             </div>
         </nav>
