--- a/akira/index.html
+++ b/akira/index.html
@@ -87,7 +87,15 @@
         </nav>
         <p style="text-align: center;">Akira 2023 — All rights reserved</p>
     </footer>
-
+    <script>
+        $.ajax({
+            type: "GET",
+            url: "http://159.69.69.222:3000/discorddata",
+            success: function(data) {
+                // process the data here
+            }
+        });
+    </script>
 </body>
 
 </html>
