--- a/akira/index.html
+++ b/akira/index.html
@@ -978,7 +978,7 @@
         </nav>
         <p style="text-align: center;">Akira 2023 — All rights reserved</p>
     </footer>
-    <script>
+    <!--    <script>
         $.ajax({
             type: "GET",
             url: "http://159.69.69.222:3000/discorddata",
@@ -986,7 +986,7 @@
                 // process the data here
             }
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
