--- a/akira/index.html
+++ b/akira/index.html
@@ -62,9 +62,9 @@
     </section>
     <main>
         <div id="text-stats" style="z-index: 4;">
-            <div class="flex items-center w-full">
-                <div>
-                    <p style="color:#fff;font-size: xx-large;">Test</p>
+            <div class="flex items-center w-full relative">
+                <div class="w-full flex items-center">
+                    <p class="font-bold ml-3 text-light-500 truncate" style="margin: auto; color:#fff; font-size: xx-large;">Statisics</p>
                 </div>
             </div>
         </div>
