--- a/akira/index.html
+++ b/akira/index.html
@@ -97,8 +97,8 @@
                     <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
                         <div class="card-content">
                             <div class="card-body text-lg-left">
-                                <h3 class="text-primary font-bold ft-12"><i class="feather icon-user-plus text-primary"></i> Welcome new members to your server</h3>
-                                <p>Use Maki's welcome feature to make new members feel welcome or to inform them about your server rules. You can fully customize your welcome card or you can keep it simple and stick to a simple message.</p>
+                                <h3 class="text-primary font-bold ft-12"><i class="feather icon-user-plus text-primary"></i> Something here </h3>
+                                <p>I dont know what gonne be here yet sorry :(.</p>
                             </div>
                         </div>
                     </div>
