--- a/akira/index.html
+++ b/akira/index.html
@@ -105,6 +105,75 @@
                 </div>
             </div>
         </div>
+        <div id="ft-0" class="flex">
+            <div id="ft-1" class="row">
+                <div id="ft-3" class="col-lg-5 col-12">
+                    <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
+                        <div class="card-content">
+                            <div class="card-body text-lg-left">
+                                <h3 class="text-primary font-bold ft-12"><i class="feather icon-user-plus text-primary"></i> Something here </h3>
+                                <p>I dont know what gonne be here yet sorry :(.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="ft-2" class="col-lg-5 col-12">
+                    <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
+                        <div class="card-content">
+                            <div class="card-body text-center">
+                                <img src="./assets/images/Feature.png" alt="Feature" class="img-fluid img-transition-fade round" width="400" height="250" loading="lazy">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="ft-0" class="flex">
+            <div id="ft-1" class="row">
+                <div id="ft-2" class="col-lg-5 col-12">
+                    <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
+                        <div class="card-content">
+                            <div class="card-body text-center">
+                                <img src="./assets/images/Feature.png" alt="Feature" class="img-fluid img-transition-fade round" width="400" height="250" loading="lazy">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="ft-3" class="col-lg-5 col-12">
+                    <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
+                        <div class="card-content">
+                            <div class="card-body text-lg-left">
+                                <h3 class="text-primary font-bold ft-12"><i class="feather icon-user-plus text-primary"></i> Something here </h3>
+                                <p>I dont know what gonne be here yet sorry :(.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="ft-0" class="flex">
+            <div id="ft-1" class="row">
+                <div id="ft-3" class="col-lg-5 col-12">
+                    <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
+                        <div class="card-content">
+                            <div class="card-body text-lg-left">
+                                <h3 class="text-primary font-bold ft-12"><i class="feather icon-user-plus text-primary"></i> Something here </h3>
+                                <p>I dont know what gonne be here yet sorry :(.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="ft-2" class="col-lg-5 col-12">
+                    <div class="card1 auth-card bg-transparent shadow-none rounded-0 mb-0 w-100">
+                        <div class="card-content">
+                            <div class="card-body text-center">
+                                <img src="./assets/images/Feature.png" alt="Feature" class="img-fluid img-transition-fade round" width="400" height="250" loading="lazy">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="guilds" class="flex flex-col mt-5 gap-2 overflow-hidden relative">
             <div class="blur-box"></div>
             <div class="flex w-full w-1400 forward-animate" style="color: white;">
