--- a/akira/index.html
+++ b/akira/index.html
@@ -159,7 +159,7 @@
             </div>
         </div>
 
-        <div id="guilds" class="flex flex-col mt-5 gap-2 overflow-hidden relative">
+        <div id="guilds" class="flex flex-col mt-5 mb-5 gap-2 overflow-hidden relative">
             <div class="blur-box"></div>
             <div class="flex w-full w-1400 forward-animate" style="color: white;">
                 <div class="flex h-18 w-full p-4 items-center">
