--- a/akira/invite/index.html
+++ b/akira/invite/index.html
@@ -53,7 +53,7 @@
         <nav class="navigation-footer ">
             <div class="section-entry ">
                 <h3>Akira Bot</h3>
-                <a href="./ " data-preload-link="true " data-preload-link-activated="true ">Home</a>
+                <a href="../ " data-preload-link="true " data-preload-link-activated="true ">Home</a>
                 <a href="./support " data-preload-link="true " data-preload-link-activated="true ">Support Server</a>
                 <a href="./commands " data-preload-link="true " data-preload-link-activated="true ">Commands</a>
                 <a href="./donate ">Premium</a>
