--- a/akira/documentation/index.html
+++ b/akira/documentation/index.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
     </header>
-    <footer class="footer ">
+    <footer class="footer" style="position: fixed;bottom: 0; width: 100%;">
         <nav class="navigation-footer ">
             <div class="section-entry ">
                 <h3>Akira Bot</h3>
