--- a/akira/documentation/index.html
+++ b/akira/documentation/index.html
@@ -32,19 +32,17 @@
     <div class="main">
         <div class="main">
             <div style="width: 100%; height: 35px; border-bottom: 1px solid black; text-align: center; margin-bottom: 2em;">
-                <span style="font-size: 40px; background-color: #333333; padding: 0 10px;">
-        Basic Permissions
-    </span>
+                <span style="font-size: 40px; background-color: #333333; padding: 0 10px;">Basic Permissions</span>
             </div>
-            <div class="columns">
-                <div class="column is-one-half ">
+            <div class="columns" style="display: contents;">
+                <div class="column is-one-half">
                     <div class="card" style="padding: 1em 1em 1em 1em; width: 100%;">
                         <div class="content">
                             <h1 style="color: #f47fff; font-weight: 600;">Creating a bot channel</h1>
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!botchannel {channel}</code>
+                                        <code>akira botchannel {channel}</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -53,14 +51,14 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Set the current channel to be the only channel that allows commands by default.
+                                        Set the a channel to be the only channel that allows commands. (defaults to current channel)
                                     </div>
                                 </div>
                             </div>
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!freechannel {channel}</code>
+                                        <code>akira freechannel {channel}</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -81,7 +79,7 @@
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!enable {command/group}</code>
+                                        <code>akira enable {command/group}</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -97,7 +95,7 @@
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!disable {command/group}</code>
+                                        <code>akira disable {command/group}</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -114,13 +112,13 @@
                     </div>
                 </div>
                 <div class="column is-one-half ">
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 88%;">
+                    <div class="card" style="padding: 1em 1em 1em 1em;">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;;">Ignore or listen to a channel</h1>
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!ignore {channel}</code>
+                                        <code>akira ignore {channel}</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -129,14 +127,14 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Yui will ignore the channel you tag. (defaults to current channel)
+                                        Akira will ignore this channel. (defaults to current channel)
                                     </div>
                                 </div>
                             </div>
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!listen {channel}</code>
+                                        <code>akira listen {channel}</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -145,19 +143,19 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Yui will stop ignoring the current channel. (or the one you tag)
+                                        Akira will stop ignoring a channel. (defaults to current channel)
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 88%; margin-top: 1em;">
+                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; margin-top: 1em;">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;">Blacklist or whitelist a member</h1>
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!blacklist &lt;user&gt;</code>
+                                        <code>akira blacklist &lt;user&gt;</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -166,14 +164,14 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Allows you to blacklist members from using Yui. (To prevent spam)
+                                        Allows you to blacklist members from using akira.
                                     </div>
                                 </div>
                             </div>
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>y!whitelist &lt;user&gt;</code>
+                                        <code>akira whitelist &lt;user&gt;</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -195,7 +193,7 @@
         Advanced Permissions
     </span>
             </div>
-            <div class="columns">
+            <div class="columns" style="display: contents;">
                 <div class="column is-one-half ">
                     <div class="card" style="padding: 1em 1em 1em 1em; width: 100%;">
                         <div class="content">
@@ -212,44 +210,44 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>y!perms list</td>
+                                        <td>a.perms list</td>
                                         <td></td>
                                         <td>Lists all available commands you can edit permissions for</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms allow</td>
+                                        <td>a.perms allow</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
                                         <td>Enable the command in the given target</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms deny</td>
+                                        <td>a.perms deny</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
                                         <td>Disable the command in the given target</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms default</td>
+                                        <td>a.perms default</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
                                         <td>Resets the permission to the default</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms clear</td>
+                                        <td>a.perms clear</td>
                                         <td>&lt;group/command&gt; &lt;type&gt; {target}</td>
                                         <td>Clears the permissions for the given extended type</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms show</td>
+                                        <td>a.perms show</td>
                                         <td>&lt;group/command&gt;</td>
                                         <td>Show set permissions for the given extended type</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms warn</td>
+                                        <td>a.perms warn</td>
                                         <td></td>
-                                        <td>Yui will react to commands that are disabled</td>
+                                        <td>Akira will start reacting to commands that are disabled</td>
                                     </tr>
                                     <tr>
-                                        <td>y!perms ignore</td>
+                                        <td>a.perms ignore</td>
                                         <td></td>
-                                        <td>Yui will just ignore commands that are disabled</td>
+                                        <td>Akira will just ignore commands that are disabled</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -273,35 +271,35 @@
                             </article>
                         </div>
                     </div>
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%;">
+                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; margin-top: 1%;">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;">Examples</h1>
                             <ul>
-                                <li>y!perms list</li>
+                                <li>a.perms list</li>
                             </ul>
                             <ul>
-                                <li>y!perms allow ping channel #general</li>
-                                <li>y!perms deny all guild</li>
-                                <li>y!perms deny fun role @newpeople</li>
-                                <li>y!perms allow fun user @member</li>
+                                <li>a.perms allow ping channel #general</li>
+                                <li>a.perms deny all guild</li>
+                                <li>a.perms deny fun role @newpeople</li>
+                                <li>a.perms allow fun user @member</li>
                             </ul>
                             <ul>
-                                <li>y!perms clear</li>
-                                <li>y!perms clear hello</li>
-                                <li>y!perms clear util channel</li>
-                                <li>y!perms show</li>
-                                <li>y!perms show fun</li>
-                                <li>y!perms show user @member</li>
+                                <li>a.perms clear</li>
+                                <li>a.perms clear hello</li>
+                                <li>a.perms clear util channel</li>
+                                <li>a.perms show</li>
+                                <li>a.perms show fun</li>
+                                <li>a.perms show user @member</li>
                             </ul>
                             <ul>
-                                <li>y!perms warn</li>
-                                <li>y!perms ignore</li>
+                                <li>a.perms warn</li>
+                                <li>a.perms ignore</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="column is-one-half ">
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 88%;">
+                <div class="column is-one-half">
+                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%;">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;">Type Hierarchy</h1>
                             <article class="message is-info" style="font-size: 0.75rem;">
@@ -311,7 +309,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 88%;">
+                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; margin-top: 1%;">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;">Types</h1>
                             <dl>
@@ -326,10 +324,10 @@
                             </dl>
                         </div>
                     </div>
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 88%; ">
+                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; margin-top: 1%; ">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;">Extended Types</h1>
-                            <h6 style="color: #f47fff;">Extended types are used by the clear and show commands, they use the same types as above as well as below:</h6>
+                            <h6 style="color: #f47fff;">Extended types use the same types as above as well as below:</h6>
                             <dl>
                                 <dt>command &lt;command&gt;</dt>
                                 <dd style="-webkit-margin-start: 40px;">Will use the command mentioned</dd>
@@ -338,17 +336,17 @@
                             </dl>
                         </div>
                     </div>
-                    <div class="card" style="padding: 1em 1em 1em 1em; width: 88%;">
+                    <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; margin-top: 1%;">
                         <div class="content">
                             <h1 style="color: #f47fff;font-weight: 600;">Getting started (optional)</h1>
                             <p>
                                 To create a channel dedicated to using bot commands you can run:
                             </p>
-                            <blockquote style="-webkit-margin-start: 40px;">y!perms deny all guild</blockquote>
+                            <blockquote style="-webkit-margin-start: 40px;">a.perms deny all guild</blockquote>
                             <p>
                                 To deny commands everywhere, and then:
                             </p>
-                            <blockquote style="-webkit-margin-start: 40px; margin-bottom: 1em;">y!perms allow all channel</blockquote>
+                            <blockquote style="-webkit-margin-start: 40px; margin-bottom: 1em;">perms allow all channel</blockquote>
                             In the channel that you wish to be used for commands.
                         </div>
                     </div>
