--- a/akira/index.html
+++ b/akira/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akira - Discord Bot</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/test.css">
 </head>
 
 <body style="margin: 0!important;">
