--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -23,7 +23,7 @@
                     <a class="navbar-item " href="../commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
                     <a class="navbar-item " href="../documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
                     <a class="navbar-item nav-active" href="../permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
-                    <a class="navbar-item " href="../supprot " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
+                    <a class="navbar-item " href="../support " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
                     <a class="navbar-item last-item " href="../invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
                 </div>
             </div>
