--- a/akira/index.html
+++ b/akira/index.html
@@ -1157,11 +1157,11 @@
         <nav class="navigation-footer ">
             <div class="section-entry ">
                 <h3>Akira Bot</h3>
-                <a href="./ " data-preload-link="true " data-preload-link-activated="true ">Home</a>
+                <a href="./permissions " data-preload-link="true " data-preload-link-activated="true ">Permissions</a>
                 <a href="./support " data-preload-link="true " data-preload-link-activated="true ">Support Server</a>
                 <a href="./commands " data-preload-link="true " data-preload-link-activated="true ">Commands</a>
                 <a href="./donate ">Premium</a>
-                <a href="./s ">Status</a>
+                <a href="./status ">Status</a>
             </div>
             <div class="section-entry ">
                 <h3>About us</h3>
