--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -378,6 +378,16 @@
         </nav>
         <p style="text-align: center; ">Akira 2023 — All rights reserved</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js "></script>
+    <script>
+        $(document).ready(function() {
+            $(".navbar-burger ").click(function() {
+                $(".navbar-burger ").toggleClass("is-active ");
+                $(".navbar-menu ").toggleClass("is-active ");
+            });
+        });
+    </script>
+
 </body>
 
 </html>
