--- a/akira/support/index.html
+++ b/akira/support/index.html
@@ -28,12 +28,12 @@
                 </a><a role="button " class="navbar-burger burger " aria-label="menu " aria-expanded="false " data-target="navbar-unfold "><span aria-hidden="true "></span><span aria-hidden="true "></span><span aria-hidden="true "></span></a></div>
             <div class="navbar-menu " id="navbar-unfold ">
                 <div class="navbar-end ">
-                    <a class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
-                    <a class="navbar-item " href="./commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
-                    <a class="navbar-item " href="./documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
+                    <a class="navbar-item " href="../ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
+                    <a class="navbar-item " href="../commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
+                    <a class="navbar-item " href="../documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
                     <a class="navbar-item " href="./permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
-                    <a class="navbar-item " href="./supprot " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
-                    <a class="navbar-item last-item " href="./invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
+                    <a class="navbar-item " href="../supprot " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
+                    <a class="navbar-item nav-active last-item " href="../invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
                 </div>
             </div>
         </nav>
@@ -58,30 +58,16 @@
             window.location.href = "https://discord.gg/TUqZTutDUz";
         }
     </script>
-    <footer class="footer ">
-        <nav class="navigation-footer ">
-            <div class="section-entry ">
-                <h3>Akira Bot</h3>
-                <a href="../ " data-preload-link="true " data-preload-link-activated="true ">Home</a>
-                <a href="./support " data-preload-link="true " data-preload-link-activated="true ">Support Server</a>
-                <a href="./commands " data-preload-link="true " data-preload-link-activated="true ">Commands</a>
-                <a href="./donate ">Premium</a>
-                <a href="./s ">Status</a>
-            </div>
-            <div class="section-entry ">
-                <h3>About us</h3>
-                <a href="./blog ">Dev notes</a>
-                <a href="./contact ">Contact Us</a>
-                <a href="./staff ">Our Team</a>
-            </div>
-            <div class="section-entry ">
-                <h3>Resources</h3>
-                <a href="./terms ">Terms of Service</a>
-                <a href="./policy ">Privacy Policy</a>
-            </div>
-        </nav>
-        <p style="text-align: center; ">Akira 2023 — All rights reserved</p>
-    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js "></script>
+    <script>
+        $(document).ready(function() {
+            $(".navbar-burger ").click(function() {
+                $(".navbar-burger ").toggleClass("is-active ");
+                $(".navbar-menu ").toggleClass("is-active ");
+            });
+        });
+    </script>
+
 
 </body>
 
