--- a/akira/support/index.html
+++ b/akira/support/index.html
@@ -67,6 +67,14 @@
             });
         });
     </script>
+    <script>
+        $(document).ready(function() {
+            $(".navbar-burger ").click(function() {
+                $(".navbar-burger ").toggleClass("is-active ");
+                $(".navbar-menu ").toggleClass("is-active ");
+            });
+        });
+    </script>
 
 
 </body>
