--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -67,7 +67,7 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Will remove the bot channel status of the mentioned channel
+                                        Will remove the bot channel status of the mentioned channel. (defaults to current channel)
                                     </div>
                                 </div>
                             </div>
