--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -58,7 +58,7 @@
                             <div class="card card-command">
                                 <header class="card-header">
                                     <p class="card-header-title" style="margin-bottom: 0em;">
-                                        <code>akira freechannel {channel}</code>
+                                        <code>akira freechannel</code>
                                     </p>
                                     <div class="card-header-icon">
                                         <span class="tag tag-mobile is-success is-pulled-right">MANAGE_SERVER</span>
@@ -67,7 +67,7 @@
                                 </header>
                                 <div class="card-content card-content-command">
                                     <div class="content">
-                                        Will remove the bot channel status of the mentioned channel. (defaults to current channel)
+                                        Will remove the bot channel status of the channel.
                                     </div>
                                 </div>
                             </div>
