--- a/akira/status/index.html
+++ b/akira/status/index.html
@@ -55,10 +55,9 @@
         }, 1000);
 
         function redirect() {
-            window.location.href = "https://discord.com/api/oauth2/authorize?client_id=738057910923296839&permissions=4393717858295&scope=bot%20applications.commands";
+            window.location.href = "https://lynnux.statuspage.io";
         }
     </script>
-
 
 </body>
 
