--- a/akira/index.html
+++ b/akira/index.html
@@ -19,11 +19,11 @@
                 </a><a role="button " class="navbar-burger burger " aria-label="menu " aria-expanded="false " data-target="navbar-unfold "><span aria-hidden="true "></span><span aria-hidden="true "></span><span aria-hidden="true "></span></a></div>
             <div class="navbar-menu " id="navbar-unfold ">
                 <div class="navbar-end ">
-                    <a class="navbar-item " href="../ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
+                    <a class="navbar-item nav-active" href="../ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
                     <a class="navbar-item " href="../commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
                     <a class="navbar-item " href="../documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
                     <a class="navbar-item " href="../permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
-                    <a class="navbar-item nav-active" href="../support " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
+                    <a class="navbar-item " href="../support " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
                     <a class="navbar-item last-item " href="../invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
                 </div>
             </div>
