--- a/akira/status/index.html
+++ b/akira/status/index.html
@@ -8,12 +8,12 @@
     <title>Invite - Akira - Discord Bot</title>
     <link rel="stylesheet" href="../assets/css/invite.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <meta name="description" content="This is a redirect page to invite akira to your server." />
+    <meta name="description" content="This is a redirect page to check akira's status." />
     <meta name="author" content="Dark-LYNN">
     <meta name="keywords" content="akira, Discord Bot">
     <meta property="og:title" content="Redirect Page - Akira Bot" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="This is a redirect page to invite akira to your server." />
+    <meta property="og:description" content="This is a redirect page to akira's status page." />
     <meta name="theme-color" content="#f47fff">
     <meta name="msapplication-TileColor" content="#f47fff">
     <meta content="#f47fff" data-react-helmet="true">
