--- a/akira/assets/index.html
+++ b/akira/assets/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
     <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <script src="../assets/js/GTag.js"></script>
 </head>
 
 <body>
