--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -8,6 +8,7 @@
     <title>Akira - Discord Bot</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="./main.css">
+    <script src="../assets/js/GTag.js"></script>
 </head>
 
 <body style="margin: 0!important; color: #fff;">
