--- a/akira/terms.html
+++ b/akira/terms.html
@@ -21,6 +21,8 @@
     <meta name="theme-color" content="#f47fff">
     <meta name="msapplication-TileColor" content="#f47fff">
     <meta content="#f47fff" data-react-helmet="true">
+    <script src="./assets/js/GTag.js"></script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
