--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akira - Commands - Discord Bot</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="./main.css">
     <script src="../assets/js/GTag.js"></script>
 </head>
 
