--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <div class="columns">
             <div class="column is-one-quarter" style="opacity: 0.8;">
                 <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; position: sticky; top: 10px;">
