--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="./main.css">
     <script src="../assets/js/GTag.js"></script>
+    <script src="./main.js"></script>
 </head>
 
 <body>
@@ -30,7 +31,7 @@
             </div>
         </nav>
     </header>
-    <main class="main">
+    <div class="main">
         <div class="columns">
             <div class="column is-one-quarter" style="opacity: 0.8;">
                 <div class="card" style="padding: 1em 1em 1em 1em; width: 100%; position: sticky; top: 10px;">
@@ -2254,7 +2255,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
     <footer class="footer ">
         <nav class="navigation-footer ">
             <div class="section-entry ">
