--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -1410,7 +1410,7 @@
                     <div class="card card-command">
                         <header class="card-header">
                             <p class="card-header-title">
-                                <code>y!profile</code>
+                                <code>a.profile</code>
                             </p>
                             <div class="card-header-icon">
 
@@ -1476,7 +1476,7 @@
                     <div class="card card-command">
                         <header class="card-header">
                             <p class="card-header-title">
-                                <code>y!mine</code>
+                                <code>a.mine</code>
                             </p>
                             <div class="card-header-icon">
 
