--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="./main.css">
     <script src="../assets/js/GTag.js"></script>
     <script src="./main.js"></script>
+
+    <!--Discord Embed-->
+    <meta property="og:url" content="https://akira.lynnux.xyz/commands/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Akira - Commands.">
+    <meta property="og:description" content="Looking for a comprehensive list of commands for Akira?&#10;You found it, you'll find all the information you need to use Akira to her fullest potential.&#10;From moderation to reaction-roles, and our Commands page makes it easy to find the features you're looking for.&#10;Akira's Commands page is an essential resource for getting the most out of our bot.">
+    <meta property="og:image" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
 </head>
 
 <body>
