--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -14,9 +14,10 @@
     <meta property="og:url" content="https://akira.lynnux.xyz/commands/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Akira - Commands.">
-    <meta property="og:description" content="Looking for a comprehensive list of commands for Akira?&#10;You found it, you'll find all the information you need to use Akira to her fullest potential.&#10;From moderation to reaction-roles, and our Commands page makes it easy to find the features you're looking for.&#10;Akira's Commands page is an essential resource for getting the most out of our bot.">
+    <meta property="og:description" content="Looking for a comprehensive list of commands for Akira? You found it, you'll find all the information you need to use Akira to her fullest potential. From moderation to reaction-roles, and our Commands page makes it easy to find the features you're looking for. Akira's Commands page is an essential resource for getting the most out of our bot.">
     <meta property="og:image" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta property="og:image:secure_url" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
+    <meta name="theme-color" content="#f47fff">
 </head>
 
 <body>
