--- a/akira/404.html
+++ b/akira/404.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="Notfound_container___vm_Q">
-        <img src="https://cnd.lynnux.xyz/svg/NotFound.svg" alt="not-found" class="Notfound_not-found-img__st0se">
+        <img src="https://cdn.lynnux.xyz/svg/NotFound.svg" alt="not-found" class="Notfound_not-found-img__st0se">
         <h4 style="background-color: transparent;">
             The page you're looking for can't be found.
         </h4>
