--- a/akira/404.html
+++ b/akira/404.html
@@ -4,6 +4,7 @@
 <head>
     <title>404 - Page Not Found</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="shortcut icon" href="./assets/images/Akira.png">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         <h4 style="background-color: transparent;">
             The page you're looking for can't be found.
         </h4>
-        <button class="Notfound_not-found-button__M59dr">Home</button>
+        <button onclick="window.location.href='https://akira.lynnux.xyz';" class="Notfound_not-found-button__M59dr">Home</button>
     </div>
 </body>
 
