--- a/cdn/404.html
+++ b/cdn/404.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>404 - Page Not Found</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="shortcut icon" href="./assets/images/Akira.png">
+    <link rel="stylesheet" href="https://akira.lynnux.xyz/assets/css/styles.css">
+    <link rel="shortcut icon" href="./images/AkiraAvatar.png">
 </head>
 
 <body>
@@ -16,12 +16,12 @@
                 </a><a role="button " class="navbar-burger burger " aria-label="menu " aria-expanded="false " data-target="navbar-unfold "><span aria-hidden="true "></span><span aria-hidden="true "></span><span aria-hidden="true "></span></a></div>
             <div class="navbar-menu " id="navbar-unfold ">
                 <div class="navbar-end ">
-                    <a class="navbar-item " href="./ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
-                    <a class="navbar-item " href="./commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
-                    <a class="navbar-item " href="./documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
-                    <a class="navbar-item " href="./permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
-                    <a class="navbar-item " href="./support " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
-                    <a class="navbar-item last-item " href="./invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
+                    <a class="navbar-item " href="https://akira.lynnux.xyz/ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
+                    <a class="navbar-item " href="https://akira.lynnux.xyz/commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
+                    <a class="navbar-item " href="https://akira.lynnux.xyz/documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
+                    <a class="navbar-item " href="https://akira.lynnux.xyz/permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
+                    <a class="navbar-item " href="https://akira.lynnux.xyz/support " target="_blank "><i class="nav-icons fab fa-discord nav-fa "></i>Support</a>
+                    <a class="navbar-item last-item " href="https://akira.lynnux.xyz/invite " target="_blank "><i class="nav-icons fas fa-plus nav-fa "></i>Invite</a>
                 </div>
             </div>
         </nav>
