--- a/akira/404.html
+++ b/akira/404.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>404 - Page Not Found</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" href="./assets/images/Akira.png">
 </head>
