--- a/akira/terms-updated.html
+++ b/akira/terms-updated.html
@@ -90,6 +90,13 @@
         });
     </script>
     <style>
+        main {
+            font-family: Arial, sans-serif;
+            color: #333;
+            margin: 0;
+            padding: 30px;
+        }
+        
         h1,
         h2,
         h3 {
