--- a/akira/terms-updated.html
+++ b/akira/terms-updated.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h3>Introduction</h3>
         <p>By using Akira, you agree to the following terms of service. These terms govern your use of the bot and any services we may offer through it.</p>
         <h3>Use of the Bot</h3>
@@ -90,7 +90,7 @@
         });
     </script>
     <style>
-        main {
+        .main {
             font-family: Arial, sans-serif;
             color: #333;
             margin: 0;
