--- a/akira/terms-updated.html
+++ b/akira/terms-updated.html
@@ -90,11 +90,12 @@
         });
     </script>
     <style>
-        .main {
+        main {
             font-family: Arial, sans-serif;
-            color: #333;
+            color: #e3e3e3;
             margin: 0;
             padding: 30px;
+            display: block!important;
         }
         
         h1,
