--- a/akira/policy-updated.html
+++ b/akira/policy-updated.html
@@ -25,11 +25,11 @@
         <nav class=" navbar nav-bar " role="navigation " aria-label="main navigation ">
             <div class="navbar-brand ">
                 <a class="navbar-item " href="./ ">
-                    <p class="nav-name ">Akira</p>
+                    <p style="font-size: inherit;" class="nav-name ">Akira</p>
                 </a><a role="button " class="navbar-burger burger " aria-label="menu " aria-expanded="false " data-target="navbar-unfold "><span aria-hidden="true "></span><span aria-hidden="true "></span><span aria-hidden="true "></span></a></div>
             <div class="navbar-menu " id="navbar-unfold ">
                 <div class="navbar-end ">
-                    <a class="navbar-item nav-active" href="../ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
+                    <a class="navbar-item " href="../ "><i class="nav-icons fas fa-home nav-fa "></i>Home</a>
                     <a class="navbar-item " href="../commands "><i class="nav-icons fas fa-terminal nav-fa "></i>Commands</a>
                     <a class="navbar-item " href="../documentation "><i class="nav-icons fas fa-book-open nav-fa "></i>Documentation</a>
                     <a class="navbar-item " href="../permissions "><i class="nav-icons fas fa-check nav-fa "></i>Permissions</a>
