--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -755,7 +755,7 @@
                     <div class="card card-command">
                         <header class="card-header">
                             <p class="card-header-title">
-                                <code>acolor</code>
+                                <code>a.color</code>
                             </p>
                             <div class="card-header-icon">
                             </div>
