--- a/sites/test.html
+++ b/sites/test.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="./test.css">
+</head>
+
 <body>
     <div class="flexChild-3PzYmX child-GVttEz columnSpread12-38DH5j" style="flex-grow: 0; flex-shrink: 0;">
         <div class="wrapper-1y6MF3 medium-1VKeKo borderPrimary-1l1Cvj colorLight-1o6rnK">
