--- a/sites/test.html
+++ b/sites/test.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="./test.css">
+    <script src="https://discord.com/assets/3ecba7af535756b7d6fd.js"></script>
 </head>
 
 <body>
