--- a/sites/test.html
+++ b/sites/test.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="https://discord.com/assets/532.7fbd5147ee8b816c530d.css">
     <script src="https://discord.com/assets/3ecba7af535756b7d6fd.js"></script>
 </head>
 
