--- a/sites/test.html
+++ b/sites/test.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://discord.com/assets/532.7fbd5147ee8b816c530d.css">
-    <script src="https://discord.com/assets/3ecba7af535756b7d6fd.js"></script>
+    <script src="/assets/3ecba7af535756b7d6fd.js" integrity="sha256-bXYgcGU367BTzeKRrko3av96vU5BO2bS5FyFe5e9O8U= sha512-DHDoEKkytXqqKDkMAWBaO8AjBwD3fjMEaEM3VB3B2msHKUN8YjRXFwkNgNC0iK38Wcv2wjQ+RheJXG2egCkobQ=="></script>
 </head>
 
 <body>
