--- a/sites/test.html
+++ b/sites/test.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=3.0" name="viewport">
     <link rel="stylesheet" href="/assets/532.7fbd5147ee8b816c530d.css" integrity="sha256-8WFFqO6gaTsgRHjubdx3oqPQ4Kfxz2yAgzNwS8H9SwE= sha512-D2oG+75wxcdPSNE/PwkTnE3qg6ZtEil3+7jtO+Qe0NTEc4ilGbTAWNhP0sCsODiAoFInTkhU5sgAGTxzykADJw==">
-    <script src="./assets/3ecba7af535756b7d6fd.js" integrity="sha256-bXYgcGU367BTzeKRrko3av96vU5BO2bS5FyFe5e9O8U= sha512-DHDoEKkytXqqKDkMAWBaO8AjBwD3fjMEaEM3VB3B2msHKUN8YjRXFwkNgNC0iK38Wcv2wjQ+RheJXG2egCkobQ=="></script>
+    <script src="./assets/3ecba7af535756b7d6fd.js"></script>
 </head>
 
 <body>
