--- a/akira/permissions/calculator.html
+++ b/akira/permissions/calculator.html
@@ -232,6 +232,7 @@
             </div>
         </div>
     </div>
+    <script src="https://discordlookup.com/js/app.js" defer=""></script>
 </body>
 
 </html>
