--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -946,6 +946,21 @@
                     <div class="card card-command">
                         <header class="card-header">
                             <p class="card-header-title">
+                                <code>a.channels</code>
+                            </p>
+                            <div class="card-header-icon">
+                                <span class="tag is-info is-pulled-right">SERVER ONLY</span>
+                            </div>
+                        </header>
+                        <div class="card-content card-content-command">
+                            <div class="content">
+                                Displays information about server channels.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card card-command">
+                        <header class="card-header">
+                            <p class="card-header-title">
                                 <code>a.emotes</code>
                             </p>
                             <div class="card-header-icon">
