--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -53,7 +53,7 @@
                             <li><a class="tablinks " onclick="show(event, 'Features');">Features</a></li>
                             <li><a class="tablinks " onclick="show(event, 'Permissions');">Permissions</a></li>
                             <li><a class="tablinks " onclick="show(event, 'Search');">Search</a></li>
-                            <li><a class="tablinks " onclick="show(event, 'Util');">Util</a></li>
+                            <li><a class="tablinks " onclick="show(event, 'Util');">Utility</a></li>
                             <li><a class="tablinks " onclick="show(event, 'Info');">Info</a></li>
                             <li><a class="tablinks " onclick="show(event, 'Fun');">Fun</a></li>
                             <li><a class="tablinks " onclick="show(event, 'Economy');">Economy</a></li>
@@ -146,7 +146,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Changes akira's nickname
+                                Changes akira's nickname.
                             </div>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Sends a welcomes message when a member to the server.
+                                Sends a welcome message when a member joins the server.
                             </div>
                         </div>
                     </div>
@@ -440,7 +440,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Set the channel to be the only channel where bot commands can be used
+                                Set the channel to be the only channel where bot commands can be used.
                             </div>
                         </div>
                     </div>
@@ -504,7 +504,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Will remove the channel lock if set
+                                Will remove the channel lock if set.
                             </div>
                         </div>
                     </div>
@@ -552,7 +552,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Allows you to configure Akira's permissions
+                                Allows you to configure Akira's permissions.
                             </div>
                         </div>
                     </div>
@@ -602,7 +602,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Search for anime and get information
+                                Search for anime and get information.
                             </div>
                         </div>
                     </div>
@@ -618,7 +618,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Search for anime/manga characters and get information
+                                Search for anime/manga characters and get information.
                             </div>
                         </div>
                     </div>
@@ -666,7 +666,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Search for anime episodes and links them
+                                Search for anime episodes and links them.
                             </div>
                         </div>
                     </div>
@@ -698,7 +698,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Search for manga and get information
+                                Search for manga and get information.
                             </div>
                         </div>
                     </div>
