--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -792,7 +792,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Help hosting and developing Akira and unlock some neat features!
+                                Help hosting and developing Akira and unlock some neat features.
                             </div>
                         </div>
                     </div>
@@ -856,7 +856,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Allows you to change your nickname
+                                Allows you to change your nickname.
                             </div>
                         </div>
                     </div>
