--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -921,7 +921,7 @@
                         </header>
                         <div class="card-content card-content-command">
                             <div class="content">
-                                Responds a link to vote for Akira.
+                                Responds with a link to vote for Akira.
                             </div>
                         </div>
                     </div>
